Adjust article spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,12 +56,12 @@ section[id] {
   --tw-prose-td-borders: var(--color-border);
 
   font-size: 1.125rem;
-  /*line-height: 1.8;*/
+  line-height: 1.5;
   /*max-width: 65ch;*/
 }
 
 .prose p {
-  margin-bottom: 1.75em;
+  /*margin-bottom: 1.75em;*/
 }
 
 .prose h1,
